version/0.1/_sources/examples/index.rst.txt
:orphan:

.. _ref_example_gallery:

========
Examples
========

End-to-end examples show how to use PyRocky. If PyRocky is installed on your machine,
you can download these examples as Python files or Jupyter notebooks and run them locally.




.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    </div>

Basic examples
--------------


.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Simple particle simulation">

.. only:: html

  .. image:: /examples/basic_examples/images/thumb/sphx_glr_minimal_thumb.png
    :alt:

  :ref:`sphx_glr_examples_basic_examples_minimal.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Simple particle simulation</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Particle simulation with wall interaction">

.. only:: html

  .. image:: /examples/basic_examples/images/thumb/sphx_glr_particle_wall_interaction_thumb.png
    :alt:

  :ref:`sphx_glr_examples_basic_examples_particle_wall_interaction.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Particle simulation with wall interaction</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Particle simulation with moving wall interaction">

.. only:: html

  .. image:: /examples/basic_examples/images/thumb/sphx_glr_particle_wall_interaction_with_motion_thumb.png
    :alt:

  :ref:`sphx_glr_examples_basic_examples_particle_wall_interaction_with_motion.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Particle simulation with moving wall interaction</div>
    </div>


.. raw:: html

    </div>


.. toctree::
   :hidden:
   :includehidden:


   /examples/basic_examples/index.rst



.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
