version/0.3/_sources/examples/index.rst.txt
:orphan:

.. _ref_example_gallery:

========
Examples
========

End-to-end examples show how to use PyRocky. You can download these examples as Python files or
Jupyter notebooks and run them locally.

Ensure that the **requests** library is installed in your Python environment in order to download
examples data at runtime::

    pip install requests





.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. thumbnail-parent-div-close

.. raw:: html

    </div>

Basic examples
--------------


.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Simple particle simulation">

.. only:: html

  .. image:: /examples/basic_examples/images/thumb/sphx_glr_minimal_thumb.png
    :alt:

  :ref:`sphx_glr_examples_basic_examples_minimal.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Simple particle simulation</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Particle simulation with wall interaction">

.. only:: html

  .. image:: /examples/basic_examples/images/thumb/sphx_glr_particle_wall_interaction_thumb.png
    :alt:

  :ref:`sphx_glr_examples_basic_examples_particle_wall_interaction.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Particle simulation with wall interaction</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Particle simulation with moving wall interaction">

.. only:: html

  .. image:: /examples/basic_examples/images/thumb/sphx_glr_particle_wall_interaction_with_motion_thumb.png
    :alt:

  :ref:`sphx_glr_examples_basic_examples_particle_wall_interaction_with_motion.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Particle simulation with moving wall interaction</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Start Simulation Async">

.. only:: html

  .. image:: /examples/basic_examples/images/thumb/sphx_glr_start_simulation_async_thumb.png
    :alt:

  :ref:`sphx_glr_examples_basic_examples_start_simulation_async.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Start Simulation Async</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


.. toctree::
   :hidden:
   :includehidden:


   /examples/basic_examples/index.rst



.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
